import {Entity, model, property, hasMany} from '@loopback/repository';
import {Task} from './task.model';
import {UserProject} from './user-project.model';
import {RoleEnum} from './../enums/role-enum';

@model()
export class User extends Entity {
  @property({
    type: 'string',
    id: true,
    generated: true,
  })
  id?: string;

  @property({
    type: 'string',
    required: true,
  })
  userName: string;

  @property({
    type: 'string',
    required: true,
  })
  password: string;

  @property({
    type: 'string',
    jsonSchema: {
      enum: Object.values(RoleEnum),
    },
  })
  role?: RoleEnum;

  @hasMany(() => Task)
  tasks: Task[];

  @hasMany(() => UserProject)
  userProjects: UserProject[];

  constructor(data?: Partial<User>) {
    super(data);
  }
}

export interface UserRelations {
  // describe navigational properties here
}

export type UserWithRelations = User & UserRelations;
