@startuml Todo-List

' avoid problems with angled crows feet
skinparam linetype ortho

entity Project {
+ id : string <<generated>>
--
+ name : string
+ description : string
+ createdBy: userId
+ updatedBy: userId
+ createdAt: date
+ updatedAt: date
+ isDeleted: boolean
}

entity User { 
+ id : string <<generated>>
--
+ userName : string
+ password : string
+ role : Role
}

enum Role {
+ ADMIN
+ USER
}

User -- Role

entity Task {
+ id : string <<generated>>
+ projectId: string
+ userId: string
--
+ name : string
+ description : string
+ status: TaskStatus
+ isCreatedByAdmin: boolean
+ createdBy: userId
+ updatedBy: userId
+ createdAt: date
+ updatedAt: date
+ linkedTo: taskId
+ isDeleted: boolean
}

Task--TaskStatus

enum TaskStatus {
+Doing
+Done
}

entity UserProject {
+ id : string <<generated>>
--
+ projectId: string
+ userId: string
}

UserProject }|--|| User
UserProject }|--|| Project

Task ||--||Task

Task }|--|| Project
Task }|--|| User

@enduml